Change flow exceptions combo to only show exception root instead of all unwinds

--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -851,12 +851,12 @@ use the <<#_printer, printer tool>>.
 
 === Exceptions debugging
 
-`FlowStorm` will report all functions that didn't return because an exception unwind the stack, even
+`FlowStorm` will capture all functions that didn't return because an exception unwind the stack, even
 when that exception was captured further and it didn't bubble up.
 
 image::user_guide_images/exceptions.png[]
 
-When an unwind situation is recorded a combobox will show up in the toolbar, containing all the functions names
+When an unwind situation is recorded a combobox will show up in the toolbar, containing the functions names
 together with the exceptions types. If you hover the mouse over any of them, a tooltip will display the exception message.
 
 Clicking on any of them will position the stepper at that point in time so you can explore what happened before.
